Added some stuff. Things aren't done yet though.